DevEx/ExpressGDI+ Library/src/dxGDIPlusAPI.hpp

//-- type declarations -------------------------------------------------------
typedef short INT16;
typedef Word UINT16;
typedef UINT16 *PUINT16;
typedef unsigned UINT32;
typedef DynamicArray<float >  TSingleDynArray;
class DELPHICLASS TdxGPBase;
enum Unit_ { UnitWorld, UnitDisplay, UnitPixel, UnitPoint, UnitInch, UnitDocument, UnitMillimeter };
typedef Unit_ TdxGPUnit;
typedef FillMode TdxGPFillMode;
typedef WrapMode TdxGPWrapMode;
typedef HatchStyle TdxGPHatchStyle;
typedef DashStyle TdxGPDashStyle;
typedef WarpMode TdxGPWarpMode;
typedef LinearGradientMode TdxGPLinearGradientMode;
typedef PenAlignment TdxGPPenAlignment;
typedef BrushType TdxGPBrushType;
typedef int TdxGPPenType;
typedef Status TdxGPStatus;
struct TdxGPSizeF;
typedef TdxGPSizeF *PdxGPSizeF;
struct TdxGPSizeF
{
	float Width;
	float Height;
} ;
struct TdxGPSize
{
	int Width;
	int Height;
} ;
typedef TdxGPSize *PdxGPSize;
struct TdxGPPointF;
typedef TdxGPPointF *PdxGPPointF;
struct TdxGPPointF
{
	float X;
	float Y;
} ;
typedef DynamicArray<TdxGPPointF >  TdxGPPointFDynArray;
struct TdxGPPoint
{
	int X;
	int Y;
} ;
typedef TdxGPPoint *PdxGPPoint;
typedef DynamicArray<TdxGPPoint >  TdxGPPointDynArray;
struct TdxGPRectF;
typedef TdxGPRectF *PdxGPRectF;
struct TdxGPRectF
{
	float X;
	float Y;
	float Width;
	float Height;
} ;
typedef DynamicArray<TdxGPRectF >  TdxGPRectFDynArray;
struct TdxGPRect
{
	int X;
	int Y;
	int Width;
	int Height;
} ;
typedef TdxGPRect *PdxGPRect;
typedef DynamicArray<TdxGPRect >  TdxGPRectDynArray;
typedef DebugEventLevel TDebugEventLevel;
//-- var, const, procedure ---------------------------------------------------
#define HatchStyleLargeGrid (HatchStyle)(4)
#define HatchStyleMin (HatchStyle)(0)
#define HatchStyleMax (HatchStyle)(52)
extern PACKAGE TdxGPPoint __fastcall MakePoint(int X, int Y)/* overload */;
extern PACKAGE TdxGPPointF __fastcall MakePoint(float X, float Y)/* overload */;
extern PACKAGE TdxGPSizeF __fastcall MakeSize(float Width, float Height)/* overload */;
extern PACKAGE TdxGPSize __fastcall MakeSize(int Width, int Height)/* overload */;
extern PACKAGE TdxGPRectF __fastcall MakeRect(float x, float y, float width, float height)/* overload */;
extern PACKAGE TdxGPRectF __fastcall MakeRect(const TdxGPPointF &location, const TdxGPSizeF &size)/* overload */;
extern PACKAGE TdxGPRect __fastcall MakeRect(int x, int y, int width, int height)/* overload */;
extern PACKAGE TdxGPRect __fastcall MakeRect(const TdxGPPoint &location, const TdxGPSize &size)/* overload */;
extern PACKAGE TdxGPRect __fastcall MakeRect(const Types::TRect &Rect)/* overload */;